# PDCurses

./: CMakeLists.txt
demos/: firework.c
direct2d/: CMakeLists.txt  ColorGlyph.hlsl  ColorGlyphEffect.cpp  ColorGlyphEffect.hpp  ColorGlyphEffectShader.h  Guid.cpp  pdc_d2d_util.c  pdcclip.c  pdcclip.cpp  pdcd2d.h  pdcdisp.cpp  pdcgetsc.c  pdckbd.c  pdckbd.cpp  pdcscrn.cpp  pdcsetsc.c  pdcsetsc.cpp  pdcutil.c  pdcutil.cpp
